Add Nav bar also responsive done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
 
 </head>
 <body class="bg-[#f5fff6]">
+    
+    <nav class="bg-white">
+        <div class="w-11/12 mx-auto p-5">
+            <div class="flex md:flex-row flex-col justify-between items-center ">
+                <div class="flex justify-center items-center gap-3">
+                    <img src="./assets/logo.png" class="h-12 w-12" alt="">
+                    <h1 class="text-3xl font-bold text-[#006747]">Emergency <br> Service</h1>
+                </div>
+
+                <div class="flex justify-center items-center gap-3 md:mt-0 mt-5">
+                    <div class="flex justify-center items-center gap-2 p-3 pr-8 pl-8 font-bold bg-[#41ff6b1a] rounded-full">
+                        <h3 id="heart-count">0</h3>
+                        <img src="./assets/heart.png" class="h-7" alt="">
+                    </div>
+                    <div class="flex justify-center items-center gap-2 p-3 pr-7 pl-7 font-bold bg-[#41ff6b1a] rounded-full">
+                        <h3 id="call-coin">100</h3>
+                        <img src="./assets/coin.png" class="h-7" alt="">
+                    </div>
+                    <div class="flex justify-center items-center gap-2 p-3 pr-7 pl-7 bg-[#00A63E] font-bold rounded-full">
+                        <h3 id="copy-count" class="text-white">0</h3>
+                        <span class="text-white">Copy</span>
+                    </div>
+                </div>
+        
+        </div>
+    </nav>
+
 
 
     <script src="./script/scripts.js"></script>
