Hero Section Finish also responsive finish

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         </div>
     </nav>
 
+        <section class=" bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]">
+        <div class="hero-section w-11/12 mx-auto p-8 text-center text-white">
+            <img src="./assets/logo-dark.png" class="md:h-24 h-20 mx-auto" alt="Main Logo">
+            <h1 class="md:text-[40px] text-[25px] font-bold mt-3 mb-3">Emergency Service Directory</h1>
+            <p class="md:text-xl text-lg font-semibold">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        </div>
+    </section>
+
+
+
 
 
     <script src="./script/scripts.js"></script>
